Subscription {Add, Edit and Delete} & Assign Features {Add and Edit} APIs routes added
