# routes/app/subscription.route.js
@@ -4,6 +4,12 @@ const superAdminMiddleware = require("@/utils/middleware/superAdminMiddleware");
 
 const GetSubscriptionsCountController = require("../../controllers/app/subscription/getSubscriptionsCount.controller");
 const GetAllSubscriptionsController = require("../../controllers/app/subscription/getAllSubscriptions.controller");
+const AddSubscriptionController = require("../../controllers/app/subscription/addSubscription.controller");
+const UpdateSubscriptionController = require("../../controllers/app/subscription/updateSubscription.controller");
+const RemoveSubscriptionController = require("../../controllers/app/subscription/removeSubscription.controller");
+
+const GetAssignFeaturesSubscriptionController = require("../../controllers/app/subscription/assign-features/getAssignFeaturesSubscription.controller");
+const UpdateAssignFeaturesSubscriptionController = require("../../controllers/app/subscription/assign-features/updateAssignFeaturesSubscription.controller");
 
 const router = express.Router();
 
@@ -19,6 +25,42 @@ router.get(
     Middleware,
     superAdminMiddleware,
     GetAllSubscriptionsController
+);
+
+
+router.post(
+    "/subscription/add",
+    Middleware,
+    superAdminMiddleware,
+    AddSubscriptionController
+);
+
+router.patch(
+    "/subscription/update/:id",
+    Middleware,
+    superAdminMiddleware,
+    UpdateSubscriptionController
+);
+
+router.delete(
+    "/subscription/remove/:id",
+    Middleware,
+    superAdminMiddleware,
+    RemoveSubscriptionController
+);
+
+router.get(
+    "/subscription/assign-features",
+    Middleware,
+    superAdminMiddleware,
+    GetAssignFeaturesSubscriptionController
+);
+
+router.patch(
+    "/subscription/assign-features/:id",
+    Middleware,
+    superAdminMiddleware,
+    UpdateAssignFeaturesSubscriptionController
 );
 
 module.exports = router;
